Style website. Update docs

--- a/todo
+++ b/todo
@@ -2,5 +2,5 @@ Bootstrap pagination
 Add carrots to section headings, contents, and more
 Check cross-browser compatibility (jquery animation doesn't work on ios)
 Algolia search
-
+HTML, CSS, JavaScript, Result(Demo) headings like 30sec of css (bootstrap badges)
 
